axion-ui/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axionui
spec:
  selector:
    matchLabels:
      app: axionui
  template:
    metadata:
      labels:
        app: axionui
    spec:
      containers:
      - name: axionui
        image: axion321.azurecr.io/axionui:v6
        ports:
        - containerPort: 80
