axion-ui/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axionuiservice
spec:
  type: ClusterIP
  selector:
    app: axionui
  ports:
  - port: 80
    targetPort: 80
