axion-ui/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axioningress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /devices
  labels:
    app.kubernetes.io/name: axioningress
spec:
  ingressClassName: azure-application-gateway
  rules:
  # frontend
  - host: frontend.manojonline.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: axionuiservice
            port: 
              number: 80

  # backend
  - host: backend.manojonline.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: telemetryservice
            port: 
              number: 8000
